Added: MaxProfs (was already declared but unused) - update arcemu-optional.conf to change (will not affect existing characters; you'll need to change available_talent_points in your characters table)

--- a/configs/Without-definitions/arcemu-optional.conf
+++ b/configs/Without-definitions/arcemu-optional.conf
@@ -3,7 +3,7 @@
 # ArcEmu Quick configs, refer to the default configs            #
 # for configuration definitions and other useless info          #
 #                                                               #
-# Last update: 2204                                             #
+# Last update: 2657                                             #
 #################################################################
 
 <Optional StartingLevel="1"
@@ -15,7 +15,9 @@
     AdditionalFun="0"
     DKStartingTalents="0"  
     Unstuck="0"  
-    UnstuckCooldown="60">
+    UnstuckCooldown="60"
+    UnstuckToBind="0"
+    MaxProfessions="2">
 
 <Interfaction InterfactionChat="0"     
     InterfactionGroup="0"
