--- a/configs/arcemu-optional.conf
+++ b/configs/arcemu-optional.conf
@@ -1,6 +1,6 @@
 ###########################################################################
 # ArcEmu Optional Configuration File
-# Last Update: $Id: arcemu-optional.conf rev.1875
+# Last Update: $Id: arcemu-optional.conf rev.2657
 #
 # This configuration file contains all non-blizzlike values.
 ###########################################################################
@@ -51,10 +51,14 @@
 #      Default: 0 (disabled)
 #
 #    UnstuckCooldown
-#	Default: 60 (0 = No cooldown, otherwise time in seconds)
+#      Default: 60 (0 = No cooldown, otherwise time in seconds)
 #
 #    UnstuckToBind (Hearthstone coordinates)
-#	Default: 1 (0 = No, 1 = Yes)
+#      Default: 1 (0 = No, 1 = Yes)
+#
+#    MaxProfessions
+#      The maximum number of professions a player can have at a time.
+#      Default: 2
 #
 #-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
 
@@ -62,13 +66,14 @@
 	LevelCap="80"
 	GenLevelCap="80"
 	AllowTBC="1"
- 	AntiMasterLootNinja="0" 
+	AntiMasterLootNinja="0" 
 	CustomCharterGiver="0" 
-  	AdditionalFun="0" 
+	AdditionalFun="0" 
 	DKStartingTalents="0" 
 	Unstuck="0" 
 	UnstuckCooldown="60" 
-	UnstuckToBind="0">
+	UnstuckToBind="0"
+	MaxProfessions="2">
 
 #-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
 # Interfaction Options
