--- a/configs/realms.conf
+++ b/configs/realms.conf
@@ -1,84 +1,73 @@
-#######################################################################
-# ArcEmu Realms Configuration File
-# Last updated at revision rev.1875
-#######################################################################
+/***********************************************************************
+* ArcEmu Realms Configuration File
+* Last edited: 7/18/09
+*
+* Configure ArcEmu's Realms below
+***********************************************************************/
 
-#********************************************************************************
-#* How to use this config file:                                                 *
-#* Config files are in a block->variable->setting format.                       *
-#* A < signifies the opening of a block, the block name is expected after that. * 
-#* After the block name, a space and then the settings sperated by = / ' '.     *
-#*                                                                              *
-#* e.g.                                                                         *
-#* <block setting="0" someval = "1">                                            *
-#*                                                                              *
-#* Comments can be in C format, e.g. /* some stuff */, with a // at the start   *
-#* of the line, or in shell format (#).                                         *
-#********************************************************************************/
-
-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
-# LogonServer Section
-#
-#    Address:
-#      The address (no port) of the server.
-#
-#    Port:
-#      The port on which the logon server listens. (*** NOT 3724 ***)
-#
-#    Name:
-#      Not really relavant, but name the logon.
-#
-#    RealmCount:
-#      The number of realms in the next section.
-#
-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
+/******************************************************
+* LogonServer Section
+*
+*    Address:
+*      The address (no port) of the server.
+*
+*    Port:
+*      The port on which the logon server listens. (*** NOT 3724 ***)
+*
+*    Name:
+*      Not really relavant, but name the logon.
+*
+*    RealmCount:
+*      The number of realms in the next section.
+*
+******************************************************/
 
 <LogonServer Address = "127.0.0.1"
 	Port = "8093"
 	Name = "Default Logon"
 	RealmCount = "1">
 
-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
-# Realm Section
-#
-#    Name:
-#      The name of the realm.
-#    
-#    Address:
-#      The address (and port) of that realm.
-#
-#    Icon:
-#      The type of realm (PVP, Normal, RPPVP, RP)
-#
-#    TimeZone:
-#      The location of the server (1=Development, 2=United States, 3=Oceanic, 4=Latin America, 
-#       5=Tournament, 6=Korean, 8=English, 9=German, 10=French)
-#
-#    Population:
-#      (0 = low, 1 = medium, 2 = high)
-#
-#   Important information below
-#
-#     change 127.0.0.1 to your EXTERNAL ip if you wish to have a PUBLIC server.
-#     This issues come up a lot!
-#
-# 	Timezone values :
-#	0=Korean				16=China
-#	1=Development				17=CN1
-#	2=United States				18=CN2
-#	3=Oceanic				19=CN3
-#	4=Latin America				20=CN4
-#	5=Tournament				21=CN5
-#	6=Korean				22=CN6
-#	8=English				23=CN7
-#	9=German				24=CN8
-#	10=French				25=Tournament
-#	11=Spanish				26=Test Server
-#	12=Russian				27=Tournament
-#	13=Tournament				28=QA Server
-#	14=Taiwan				29=CN9
-#	15=Tournament				30=TestServer2
-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
+/******************************************************
+* Realm Section
+*
+*    Name:
+*      The name of the realm.
+*    
+*    Address:
+*      The address (and port) of that realm.
+*
+*    Icon:
+*      The type of realm (PVP, Normal, RPPVP, RP)
+*
+*    TimeZone:
+*      The location of the server (1=Development, 2=United States, 3=Oceanic, 4=Latin America, 
+*       5=Tournament, 6=Korean, 8=English, 9=German, 10=French)
+*
+*    Population:
+*      (0 = low, 1 = medium, 2 = high)
+*
+*   Important information below
+*
+*     change 127.0.0.1 to your EXTERNAL ip if you wish to have a PUBLIC server.
+*     This issues come up a lot!
+*
+* 	Timezone values :
+*	0=Korean                                16=China
+*	1=Development				17=CN1
+*	2=United States				18=CN2
+*	3=Oceanic				19=CN3
+*	4=Latin America				20=CN4
+*	5=Tournament				21=CN5
+*	6=Korean				22=CN6
+*	8=English				23=CN7
+*	9=German				24=CN8
+*	10=French				25=Tournament
+*	11=Spanish				26=Test Server
+*	12=Russian				27=Tournament
+*	13=Tournament				28=QA Server
+*	14=Taiwan				29=CN9
+*	15=Tournament				30=TestServer2
+******************************************************/
 
 <Realm1 Name = "Test Realm"
 	Address = "127.0.0.1:8129" 
