* Fixed a *nix bug which caused *nix to enable debug on specifying --disable-debug with the configure script. * Just for clarity debug mode is DISABLED by default, and you need to explicitly specify --enable-debug to enable it.
Tks Marcelo, fixed your bug a year after you added it :)

--- a/configure.ac
+++ b/configure.ac
@@ -148,7 +148,7 @@ AC_ARG_ENABLE(gcov,
 )
 
 AC_ARG_ENABLE(debug,
-     AC_HELP_STRING([--disable-debug],[disable debug]),
+     AC_HELP_STRING([--enable-debug],[enable debug]),
 	 [enable_debug=$enableval],
 	 [enable_debug=yes]
 )
