* Commiting some missing changes from my earlier commit regarding configure.ac * Fixed up the scalingstatvalues lookup * Changed how training dummies are handled, because earlier I forgot about the Ebon Hold dummies. They will work now. Don't forget to apply the table SQL update! * Removed the training dummy related scripts, since they are no longer needed.
Thanks goes to Burlex for some ideas regarding the dummies and the dbcstoreage!

--- a/configure.ac
+++ b/configure.ac
@@ -149,8 +149,8 @@ AC_ARG_ENABLE(gcov,
 
 AC_ARG_ENABLE(debug,
      AC_HELP_STRING([--enable-debug],[enable debug]),
-	 [enable_debug=$enableval],
-	 [enable_debug=yes]
+	 [enable_debug=yes],
+	 [enable_debug=no]
 )
 
 if test "x$enable_debug" = "xyes" ; then
@@ -160,7 +160,7 @@ fi
 
 AC_ARG_ENABLE(optimize,
      AC_HELP_STRING([--enable-optimize],[enable code optimization]),
-	 [enable_optimize=$enableval],
+	 [enable_optimize=yes],
 	 [enable_optimize=no]
 )
 
