* ADDED: UnixMetric class for the statdumer plugin. It will display CPU, and RAM usage on Unix systems too!

--- a/src/arcemu-world/Makefile.am
+++ b/src/arcemu-world/Makefile.am
@@ -176,6 +176,8 @@ arcemu_world_SOURCES = \
     TransporterHandler.h \
     Unit.cpp \
     Unit.h \
+    UnixMetric.cpp \
+    UnixMetric.hpp \
     UpdateFields.h \
     UpdateMask.h \
     Vehicle.cpp \
