UPDATED: UnixMetric changed .hpp to .h and all references to it

--- a/src/arcemu-world/Makefile.am
+++ b/src/arcemu-world/Makefile.am
@@ -177,7 +177,7 @@ arcemu_world_SOURCES = \
     Unit.cpp \
     Unit.h \
     UnixMetric.cpp \
-    UnixMetric.hpp \
+    UnixMetric.h \
     UpdateFields.h \
     UpdateMask.h \
     Vehicle.cpp \
