--- a/win/VC90/arcemu-shared.vcproj
+++ b/win/VC90/arcemu-shared.vcproj
@@ -702,7 +702,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\logonserver\PeriodicFunctionCall_Thread.h"
+				RelativePath="..\..\src\arcemu-logonserver\PeriodicFunctionCall_Thread.h"
 				>
 			</File>
 			<File
