* MODIFIED: - Changed a few Phase() to parameter of SpawnCreature/SpawnGameObject - Also changed some Phase() to m_phase, as we're setting it before PushToWorld we don't need to update visibility... * ADDED: Stewards of Wyrmrest script from: http://arcemu.org/forums/index.php?showtopic=17473&st=0&#entry79930

--- a/src/scripts/projects/Misc2008.vcproj
+++ b/src/scripts/projects/Misc2008.vcproj
@@ -451,6 +451,10 @@
 				RelativePath="..\src\MiscScripts\RandomScripts.cpp"
 				>
 			</File>
+			<File
+				RelativePath="..\src\MiscScripts\WyrmrestTemple.cpp"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
