FIXED: Compile of misc scripts, patch by Adraen, http://arcemu.org/forums/index.php?showtopic=18048

--- a/src/scripts/src/MiscScripts/Makefile.am
+++ b/src/scripts/src/MiscScripts/Makefile.am
@@ -12,5 +12,6 @@ GameObjectTeleportTable.cpp \
 GameObjects.cpp \
 RandomScripts.cpp \
 QuelDanasPortal.cpp \
+WyrmrestTemple.cpp \
 EbonHold.cpp \
 Setup.cpp
